@@ -1043,7 +1043,7 @@
    <date>2012-06-26</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-*
+* [mms] Disable blacklist, vacation, and whitelist API methods if the preference is locked.
    </notes>
   </release>
   <release>
